--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.6.3",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "autoprefixer": "^10.4.15",
-    "nuxt": "^3.7.1",
+    "nuxt": "^3.14.1592",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   },
@@ -24,6 +24,8 @@
     "@vuepic/vue-datepicker": "^7.2.0",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
+    "typescript": "^5.7.2",
+    "vue": "^3.5.13",
     "vue-final-modal": "^4.4.5",
     "vue3-carousel": "^0.3.1",
     "vue3-carousel-nuxt": "^1.1.0",
@@ -31,6 +33,6 @@
     "yup": "^1.3.2"
   },
   "overrides": {
-    "vue": "latest"
+    "vue": "3.5.13"
   }
 }
