--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.6.3",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "autoprefixer": "^10.4.15",
@@ -25,7 +25,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "vue-final-modal": "^4.4.5",
-    "vue3-carousel": "^0.3.1",
+    "vue3-carousel": "^0.3.4",
     "vue3-carousel-nuxt": "^1.1.0",
     "vue3-tags-input": "^1.0.12",
     "yup": "^1.3.2"
